<resources>
    <string name="app_name">MatchaStock</string>

    <string name="welcome">Bienvenido</string>
    <string name="login">Iniciar Sesión</string>
    <string name="btn_entrar">Entrar</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="account">¿Aún no tienes una cuenta?</string>
    <string name="account2">¿Ya tienes una cuenta?</string>
    <string name="register"><u>Regístrate aquí</u></string>
    <string name="login2"><u>Iniciar Sesión aquí</u></string>
    <string name="sign_up">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="email">Email</string>

    <string name="descripcion">Descripcion</string>
    <string name="id">ID</string>
    <string name="cantidad">Cantidad</string>


    <string name="nuevo">Nuevo</string>
    <string name="eliminado">Retirados</string>

    <string name="home">Home</string>
    <string name="profile">Perfil</string>
    <string name="inventario">Inventario</string>

    <string name="user_info">Andrés Castro</string>
    <string name="correo">andres.castro@gmail.com</string>
    <string name="contraseña_actual">Contraseña actual</string>
    <string name="nueva_contraseña">Nueva contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="btn_actualizar">Actualizar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="cambiar_contraseña">Editar contraseña</string>
    <string name="edit_user">Editar datos de usuario</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>

    <string name="prod_eliminar">Eliminar producto</string>
    <string name="editar_prod">Editar producto</string>
    <string name="nuevo_producto">Nuevo producto</string>
    <string name="add_prod">Añadir nuevo producto</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="btnB">Botón buscar</string>
    <string name="prodel">Productos eliminados del inventario</string>







</resources>