<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo_matcha" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/second_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/custom_user_icon"
                android:drawablePadding="12dp"

                android:ems="10"
                android:hint="@string/name"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:boxStrokeColor="@color/second_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/custom_user_icon"
                android:drawablePadding="12dp"
                android:ems="10"

                android:hint="@string/apellido"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:boxStrokeColor="@color/second_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/custom_username_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/username"
            android:textColor="@color/second_color"
            android:textColorHint="@color/second_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:boxStrokeColor="@color/second_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="@color/second_color"
            android:textColorHint="@color/second_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:boxStrokeColor="@color/second_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPsw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/second_color"
            android:textColorHint="@color/second_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/sign_up"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/account2"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/login2"
        android:textColor="@color/second_color"
        android:textSize="15sp" />

</LinearLayout>