<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".NuevoFragment">

    <ImageView
        android:id="@+id/ivWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/svg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivMatcha"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="-60dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/titlelessmatcha" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:gravity="center"
        android:text="@string/add_prod"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="125dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/second_color"
        app:boxStrokeColor="@color/second_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/second_color"
            android:textColorHint="@color/second_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/second_color"
        app:boxStrokeColor="@color/second_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text"
            android:textColor="@color/second_color"
            android:textColorHint="@color/second_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textColorHint="@color/second_color"
        app:boxStrokeColor="@color/second_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCantidad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/cantidad"
            android:inputType="number"
            android:textColor="@color/second_color"
            android:textColorHint="@color/second_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/guardar"
        android:textSize="20sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:background="@color/card_bg"
            app:itemIconTint="@color/second_color"
            app:itemTextColor="@color/second_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_nav" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>