<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".UserEditFragment">


    <ImageView
        android:id="@+id/ivWave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMatcha"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="-60dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/titlelessmatcha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWave" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:orientation="vertical"
        android:padding="17dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMatcha">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="0dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/second_color" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/name"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="-60dp"
            android:layout_marginTop="-62dp"
            app:boxStrokeColor="@color/second_color" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApell"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/apellido"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/second_color" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/username"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/second_color" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/second_color"
            app:passwordToggleEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etContraseña"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/nueva_contraseña"
                android:textColor="@color/second_color"
                android:textColorHint="@color/second_color" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnActUser"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginTop="1dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/btn_actualizar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCancelUser"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="-50dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/btn_cancelar"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/card_bg"
        app:itemIconTint="@color/second_color"
        app:itemTextColor="@color/second_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>