<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="146dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/card_bg"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@mipmap/titlelessmatcha"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvProdName"
                tools:text="Producto"
                android:textSize="28sp"
                android:textColor="@color/second_color"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescProd"
                tools:text="Descripcion del producto"
                android:textSize="18sp"
                android:textColor="@color/second_color"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCantProd"
                tools:text="Cantidad"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/second_color" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_add_circle"
                android:id="@+id/btnNuevoProd"
                android:contentDescription="@string/nuevo_producto"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/edit_24"
                android:id="@+id/btnEditarProd"
                android:contentDescription="@string/editar_prod"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_delete"
                android:id="@+id/btnEliminarProd"
                android:contentDescription="@string/prod_eliminar" />

        </LinearLayout>

    </LinearLayout>




</androidx.cardview.widget.CardView>